# LoomVideo

./: .gitignore  README.md  hf_download.py  pyproject.toml
configs/: accelerate.yaml  deepspeed_stage2.json
configs/dataset/: benchmarks.yaml  train_demo.yaml
configs/evaluation/: evaluation.yaml
configs/inference/: generation.yaml
configs/train/: stage1.yaml  stage2.yaml  stage3.yaml
scripts/evaluation/: evaluate.py
scripts/inference/: generate.py
scripts/train/: train.py
src/dataset/: dataloader.py  dataset.py  processors.py  utils.py
src/evaluation/: generation.py  geneval.py  imgedit.py  intelligent_vbench.py  metrics.py  openve.py  refvie.py  utils.py  vbench.py
src/models/: utils.py
src/models/transformers/: loomvideo.py  qwen3vl.py  wan22.py
